add changes to login.html and style.css

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -11,9 +11,9 @@
     <div class="container">
         <div class="login-container">
             <form>
-                <input name="email" type="text" placeholder="email@email.com">
-                <input name="password" type="password" placeholder="password">
-                <button>Zaloguj się</button>
+                <label for="email"></label><input id="email" name="email" type="text" placeholder="email">
+                <label for="password"></label><input id="password" name="password" type="password" placeholder="hasło">
+                <button id="loginbtn">Zaloguj się</button>
             </form>
         </div>
     </div>
