--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,20 @@
-html{
-    height: 100%;
+* {
+    font-size: 20px;
 }
-
 body {
     margin: 0;
     display: grid;
     height: 100%;
     background-color: #3F99BC;
-    grid-template-areas:
-        "header_section"
-        "Site-content_section"
-        "footer_section";
-    grid-template-rows: 100px 100% 50px;
+    grid-template-rows: 100px 100%;
 }
 .header {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
     grid-area: header_section;
     background: #211A1A;
     font-style: italic;
@@ -21,20 +22,34 @@ body {
     font-size: 40px;
     text-align: center;
     color: white;
-    padding-bottom: 10px;
+    border-bottom: 1px solid white;
+    font-weight: bold;
 }
 
 .container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    border-style: solid;
+    padding: 30px;
 }
 
 .login-container {
     width: 50%;
+    max-width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+::placeholder {
+    color: white;
+    opacity: 1;
 }
 
 form {
@@ -42,33 +57,39 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
     height: 40vh;
 
-    background: #707070 0% 0% no-repeat padding-box;
-    box-shadow: 0px 6px 6px #00000029;
-    border: 1px solid #707070;
+    box-shadow: 0 6px 6px #00000029;
+    border: 2px solid white;
     border-radius: 33px;
+    background: rgba(112, 112, 112, 0.8);
+
 }
 
 input {
     background-color: transparent;
-    border: none;
-    border-bottom: 2px solid gray;
+    border: 0;
+    outline: 0;
+    border-bottom: 2px solid white;
     padding: 1em;
     margin: 1em;
     width: 50%;
 }
 
-button {
-    background: transparent linear-gradient(180deg, #FFFFFF 0%, #808080 100%) 0% 0% no-repeat padding-box;
-    box-shadow: 0px 3px 6px #00000029;
-    border-radius: 19px;
+input:focus {
+    outline: none!important;
+}
 
-    width: 50%;
+button {
+    background: transparent linear-gradient(180deg, #FFFFFF 0%, #808080 100%) 0 0 no-repeat padding-box;
+    box-shadow: 0 3px 6px #00000029;
+    border-radius: 20px;
+
+    width: 30%;
     border: none;
     color: black;
-    margin: 1em;
+    margin: 2em;
     line-height: 2.5em;
 }
 
@@ -93,4 +114,8 @@ button {
         height: 7em;
         margin: 2em;
     }
+}
+
+#email, #password {
+    color: white;
 }
