add mainpage.html and add views for mainpage in style.css

--- a/public/views/mainpage.html
+++ b/public/views/mainpage.html
@@ -3,8 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>MAIN PAGE</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
+    <header>
+        <div class="header" id="header">
+            <nav class="nav container">
+                <a id="compname" class="nav_comp_name">CAR RENTAL</a>
+                <div class="nav__menu" id="nav-menu">
+                    <ul class="nav__list" id="nav-list">
+                        <li class="nav__item">
+                            <a href="#home" class="nav__link">Strona główna</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#services" class="nav__link">Usługi</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#cars" class="nav__link">Pojazdy</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#contact" class="nav__link">Kontakt</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#signout" class="nav__link">Wyloguj się</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <div class="container">
+        <div class="text-container">
 
+        </div>
+        <div class="img-container">
+
+        </div>
+    </div>
 </body>
 </html>
