--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,3 @@
-* {
-    font-size: 20px;
-}
 body {
     margin: 0;
     display: grid;
@@ -12,17 +9,19 @@ body {
     display: flex;
     position: fixed;
     width: 100%;
+    height: auto;
     padding: 20px;
     justify-content: center;
     align-items: center;
-    grid-area: header_section;
     background: #211A1A;
+    border-bottom: 1px solid white;
+}
+.comp_name {
     font-style: italic;
     font-family: Lato, serif;
     font-size: 40px;
     text-align: center;
     color: white;
-    border-bottom: 1px solid white;
     font-weight: bold;
 }
 
@@ -34,7 +33,6 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border-style: solid;
     padding: 30px;
 }
 
@@ -117,5 +115,54 @@ button {
 }
 
 #email, #password {
+    color: white;
+}
+
+/* main page */
+#header {
+    display: flex;
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    background: #211A1A;
+    border-bottom: 1px solid white;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    padding: 20px;
+}
+
+.nav_comp_name {
+    display: inline-flex;
+    align-items: center;
+    transition: .3s;
+    font-size: 20px;
+    color: white;
+    font-style: italic;
+    font-family: Lato, serif;
+}
+
+.nav__list {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    font-family: Lato, serif;
+}
+
+.nav__item {
+    margin: 10px;
+}
+
+.nav__link {
+    text-decoration: none;
     color: white;
 }
