--- a/public/views/login.html
+++ b/public/views/login.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <header>
-        <div class="header">CAR RENTAL</div>
+        <div class="header">
+            <div class="comp_name">CAR RENTAL</div>
+        </div>
     </header>
     <div class="container">
         <div class="login-container">
