--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+*{
+    font-family: Lato, serif;
+}
 body {
     margin: 0;
     display: grid;
@@ -9,7 +12,7 @@ body {
     display: flex;
     position: fixed;
     width: 100%;
-    height: auto;
+    height: 80px;
     padding: 20px;
     justify-content: center;
     align-items: center;
@@ -18,7 +21,6 @@ body {
 }
 .comp_name {
     font-style: italic;
-    font-family: Lato, serif;
     font-size: 40px;
     text-align: center;
     color: white;
@@ -28,7 +30,6 @@ body {
 .container {
     width: 100%;
     height: 100%;
-    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -122,7 +123,6 @@ button {
 #header {
     display: flex;
     width: 100%;
-    height: auto;
     padding: 20px;
     justify-content: center;
     align-items: center;
@@ -165,4 +165,37 @@ button {
 .nav__link {
     text-decoration: none;
     color: white;
+}
+
+.main-container {
+    margin-top: 21px;
+    max-width: 100%;
+}
+
+
+.split {
+    height: 100%;
+    position: fixed;
+    width: 50%;
+}
+
+.left {
+    left: 0;
+    color: #FFFFFF;
+    font-size: 40px;
+    max-width: 960px;
+}
+.top-text {
+    text-align: center;
+}
+.bottom-text {
+    text-align: justify;
+}
+
+.right {
+    right: 0;
+}
+
+.img-custom {
+    background-size: 100px;
 }
