--- a/public/views/mainpage.html
+++ b/public/views/mainpage.html
@@ -32,12 +32,21 @@
             </nav>
         </div>
     </header>
-    <div class="container">
-        <div class="text-container">
-
+    <div class="main-container">
+        <div class="split left">
+            <div class="centered">
+                <div class="top-text">
+                    <h2>Wynajmij samochód swoich marzeń!</h2>
+                </div>
+                <div class="bottom-text">
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                </div>
+            </div>
         </div>
-        <div class="img-container">
-
+        <div class="split right">
+            <div class="centered">
+                <img src="../img/car_background.png" class="img-custom" alt="Car background">
+            </div>
         </div>
     </div>
 </body>
