add new views and new style in css

--- a/public/views/choosecarpage.html
+++ b/public/views/choosecarpage.html
@@ -3,8 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>CHOOSE CAR PAGE</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-
+<div id="app-header">
+    <nav class="nav-container">
+        <a id="compname" class="nav_comp_name">CAR RENTAL</a>
+        <div class="nav__menu" id="nav-menu">
+            <ul class="nav__list" id="nav-list">
+                <li class="nav__item">
+                    <a href="#home" class="nav__link">Strona główna</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#services" class="nav__link">Usługi</a>
+                </li>
+                <li class="nav__item">
+                    <a href="choosecarpage.html" class="nav__link">Pojazdy</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#contact" class="nav__link">Kontakt</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#signout" class="nav__link">Wyloguj się</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+<div class="tile-container">
+    <div class="tile">
+        <div class="tile-img"></div>
+        <div class="tile-content">
+            <div class="tile-description">
+                <p class="description-name">Ferrari</p>
+                <p class="additional-description">2022</p>
+                <p class="additional-description">Automat</p>
+            </div>
+            <button class="rentbtn">Wynajmij</button>
+        </div>
+    </div>
+    <div class="tile">
+        <div class="tile-img"></div>
+        <div class="tile-content">
+            <div class="tile-description">
+                <p class="description-name">Ferrari</p>
+                <p class="additional-description">2022</p>
+                <p class="additional-description">Automat</p>
+            </div>
+            <button class="rentbtn">Wynajmij</button>
+        </div>
+    </div>
+    <div class="tile">
+        <div class="tile-img"></div>
+        <div class="tile-content">
+            <div class="tile-description">
+                <p class="description-name">Ferrari</p>
+                <p class="additional-description">2022</p>
+                <p class="additional-description">Automat</p>
+            </div>
+            <button class="rentbtn">Wynajmij</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
