--- a/public/views/mainpage.html
+++ b/public/views/mainpage.html
@@ -19,7 +19,7 @@
                         <a href="#services" class="nav__link">Usługi</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#cars" class="nav__link">Pojazdy</a>
+                        <a href="choosecarpage.html" class="nav__link">Pojazdy</a>
                     </li>
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">Kontakt</a>
