--- a/public/views/choosecarpage.html
+++ b/public/views/choosecarpage.html
@@ -12,19 +12,19 @@
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list" id="nav-list">
                 <li class="nav__item">
-                    <a href="#home" class="nav__link">Strona główna</a>
+                    <a href="mainpage.html" class="nav__link">Strona główna</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#services" class="nav__link">Usługi</a>
+                    <a href="servicespage.html" class="nav__link">Usługi</a>
                 </li>
                 <li class="nav__item">
                     <a href="choosecarpage.html" class="nav__link">Pojazdy</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#contact" class="nav__link">Kontakt</a>
+                    <a href="contactpage.html" class="nav__link">Kontakt</a>
                 </li>
                 <li class="nav__item">
-                    <a href="#signout" class="nav__link">Wyloguj się</a>
+                    <a href="login.html" class="nav__link">Wyloguj się</a>
                 </li>
             </ul>
         </div>
@@ -32,36 +32,42 @@
 </div>
 <div class="tile-container">
     <div class="tile">
-        <div class="tile-img"></div>
+        <div class="tile-img">
+            <img src="../img/choose_car.jpg" class="img-content">
+        </div>
         <div class="tile-content">
             <div class="tile-description">
                 <p class="description-name">Ferrari</p>
                 <p class="additional-description">2022</p>
                 <p class="additional-description">Automat</p>
             </div>
-            <button class="rentbtn">Wynajmij</button>
+            <button class="rent-btn">Wynajmij</button>
         </div>
     </div>
     <div class="tile">
-        <div class="tile-img"></div>
+        <div class="tile-img">
+            <img src="../img/choose_car.jpg" class="img-content">
+        </div>
         <div class="tile-content">
             <div class="tile-description">
                 <p class="description-name">Ferrari</p>
                 <p class="additional-description">2022</p>
                 <p class="additional-description">Automat</p>
             </div>
-            <button class="rentbtn">Wynajmij</button>
+            <button class="rent-btn">Wynajmij</button>
         </div>
     </div>
     <div class="tile">
-        <div class="tile-img"></div>
+        <div class="tile-img">
+            <img src="../img/choose_car.jpg" class="img-content">
+        </div>
         <div class="tile-content">
             <div class="tile-description">
                 <p class="description-name">Ferrari</p>
                 <p class="additional-description">2022</p>
                 <p class="additional-description">Automat</p>
             </div>
-            <button class="rentbtn">Wynajmij</button>
+            <button class="rent-btn">Wynajmij</button>
         </div>
     </div>
 </div>
