--- a/public/views/contactpage.html
+++ b/public/views/contactpage.html
@@ -3,8 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>CONTACT PAGE</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-
+    <div id="app-header">
+        <nav class="nav-container">
+            <a id="compname" class="nav_comp_name">CAR RENTAL</a>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list" id="nav-list">
+                    <li class="nav__item">
+                        <a href="mainpage.html" class="nav__link">Strona główna</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="servicespage.html" class="nav__link">Usługi</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="choosecarpage.html" class="nav__link">Pojazdy</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="contactpage.html" class="nav__link">Kontakt</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="login.html" class="nav__link">Wyloguj się</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
