--- a/public/views/mainpage.html
+++ b/public/views/mainpage.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>MAIN PAGE</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-
-    <title>MAIN PAGE</title>
 </head>
 <body>
     <div id="app-header">
@@ -13,19 +12,19 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list" id="nav-list">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link">Strona główna</a>
+                        <a href="#" onclick="redirect('mainpage');return false" class="nav__link">Strona główna</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#services" class="nav__link">Usługi</a>
+                        <a href="#" onclick="redirect('servicespage');return false" class="nav__link">Usługi</a>
                     </li>
                     <li class="nav__item">
                         <a href="choosecarpage.html" class="nav__link">Pojazdy</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#contact" class="nav__link">Kontakt</a>
+                        <a href="contactpage.html" class="nav__link">Kontakt</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#signout" class="nav__link">Wyloguj się</a>
+                        <a href="login.html" class="nav__link">Wyloguj się</a>
                     </li>
                 </ul>
             </div>
