--- a/public/css/choosecarpage.css
+++ b/public/css/choosecarpage.css
@@ -12,12 +12,22 @@
     height: 300px;
     background-color: white;
     margin: 50px 0 0 50px;
+    border-radius: 33px;
 }
 
 .tile-container .tile .tile-img {
     width: 100%;
     height: 65%;
     background-color: red;
+    border-top-left-radius: 33px;
+    border-top-right-radius: 33px;
+}
+
+.tile-container .tile .tile-img .img-content {
+    width:100%;
+    height:100%;
+    border-top-left-radius: 33px;
+    border-top-right-radius: 33px;
 }
 
 .tile-container .tile .tile-content {
@@ -26,7 +36,7 @@
 }
 
 .tile-container .tile .tile-content .tile-description {
-    padding-left: 10px;
+    padding-left: 15px;
 }
 
 .tile-container .tile .tile-content .tile-description .description-name {
@@ -37,6 +47,6 @@
     font-size: 12px;
 }
 
-.rentbtn {
+.rent-btn {
     margin-left: auto;
 }
