add new img to repo and change styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 @import "loginpage.css";
 @import "mainpage.css";
 @import "choosecarpage.css";
+@import "contactpage.css";
 
 *{
     font-family: Lato, serif;
