--- a/public/views/choosecarpage.html
+++ b/public/views/choosecarpage.html
@@ -1,75 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>CHOOSE CAR PAGE</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-<div id="app-header">
-    <nav class="nav-container">
-        <a id="compname" class="nav_comp_name">CAR RENTAL</a>
-        <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list" id="nav-list">
-                <li class="nav__item">
-                    <a href="mainpage.html" class="nav__link">Strona główna</a>
-                </li>
-                <li class="nav__item">
-                    <a href="servicespage.html" class="nav__link">Usługi</a>
-                </li>
-                <li class="nav__item">
-                    <a href="choosecarpage.html" class="nav__link">Pojazdy</a>
-                </li>
-                <li class="nav__item">
-                    <a href="contactpage.html" class="nav__link">Kontakt</a>
-                </li>
-                <li class="nav__item">
-                    <a href="login.html" class="nav__link">Wyloguj się</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-<div class="tile-container">
-    <div class="tile">
-        <div class="tile-img">
-            <img src="../img/choose_car.jpg" class="img-content">
-        </div>
-        <div class="tile-content">
-            <div class="tile-description">
-                <p class="description-name">Ferrari</p>
-                <p class="additional-description">2022</p>
-                <p class="additional-description">Automat</p>
+    <div id="app-header">
+        <nav class="nav-container">
+            <a id="compname" class="nav_comp_name">CAR RENTAL</a>
+            <div class="lang-wrap">
+                <img class="pl-lang current-lang" src="../img/poland.png">
+                <img class="en-lang" src="../img/united-kingdom.png">
             </div>
-            <button class="rent-btn">Wynajmij</button>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list" id="nav-list">
+                    <li class="nav__item">
+                        <a href="mainpage.html" class="nav__link">Strona główna</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="servicespage.html" class="nav__link">Usługi</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="choosecarpage.html" class="nav__link">Pojazdy</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="contactpage.html" class="nav__link">Kontakt</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="login.html" class="nav__link">Wyloguj się</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="tile-container">
+        <div class="tile">
+            <div class="tile-img">
+                <img src="../img/choose_car.jpg" class="img-content">
+            </div>
+            <div class="tile-content">
+                <div class="tile-description">
+                    <p class="description-name">Ferrari</p>
+                    <p class="additional-description">2022</p>
+                    <p class="additional-description">Automat</p>
+                </div>
+                <button class="rent-btn">Wynajmij</button>
+            </div>
+        </div>
+        <div class="tile">
+            <div class="tile-img">
+                <img src="../img/choose_car.jpg" class="img-content">
+            </div>
+            <div class="tile-content">
+                <div class="tile-description">
+                    <p class="description-name">Ferrari</p>
+                    <p class="additional-description">2022</p>
+                    <p class="additional-description">Automat</p>
+                </div>
+                <button class="rent-btn">Wynajmij</button>
+            </div>
+        </div>
+        <div class="tile">
+            <div class="tile-img">
+                <img src="../img/choose_car.jpg" class="img-content">
+            </div>
+            <div class="tile-content">
+                <div class="tile-description">
+                    <p class="description-name">Ferrari</p>
+                    <p class="additional-description">2022</p>
+                    <p class="additional-description">Automat</p>
+                </div>
+                <button class="rent-btn">Wynajmij</button>
+            </div>
         </div>
     </div>
-    <div class="tile">
-        <div class="tile-img">
-            <img src="../img/choose_car.jpg" class="img-content">
-        </div>
-        <div class="tile-content">
-            <div class="tile-description">
-                <p class="description-name">Ferrari</p>
-                <p class="additional-description">2022</p>
-                <p class="additional-description">Automat</p>
-            </div>
-            <button class="rent-btn">Wynajmij</button>
-        </div>
-    </div>
-    <div class="tile">
-        <div class="tile-img">
-            <img src="../img/choose_car.jpg" class="img-content">
-        </div>
-        <div class="tile-content">
-            <div class="tile-description">
-                <p class="description-name">Ferrari</p>
-                <p class="additional-description">2022</p>
-                <p class="additional-description">Automat</p>
-            </div>
-            <button class="rent-btn">Wynajmij</button>
-        </div>
-    </div>
-</div>
 </body>
 </html>
