--- a/public/views/servicespage.html
+++ b/public/views/servicespage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>SERVICE PAGE</title>
@@ -9,6 +9,10 @@
     <div id="app-header">
         <nav class="nav-container">
             <a id="compname" class="nav_comp_name">CAR RENTAL</a>
+            <div class="lang-wrap">
+                <img class="pl-lang current-lang" src="../img/poland.png">
+                <img class="en-lang" src="../img/united-kingdom.png">
+            </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list" id="nav-list">
                     <li class="nav__item">
