--- a/public/css/loginpage.css
+++ b/public/css/loginpage.css
@@ -3,8 +3,6 @@
     position: fixed;
     width: 100%;
     height: 80px;
-    padding: 20px;
-    justify-content: center;
     align-items: center;
     background: #211A1A;
     border-bottom: 2px solid white;
@@ -15,6 +13,24 @@
     text-align: center;
     color: white;
     font-weight: bold;
+    margin-left: 20px;
+}
+
+.lang-wrap {
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 20px;
+}
+
+.lang-wrap .lang-item {
+    height: 50px;
+    width: 50px;
+    background-size: 20px;
+}
+
+.lang-wrap #en-lang {
+    margin-left: 10px;
 }
 
 .container {
@@ -59,6 +75,7 @@
 .container .container-header .header-item.active {
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(55,55,79,1) 35%, #3F99BC 100%);
     color: white;
+    margin-right: 5px
 }
 
 .container .container-content .text-field {
