--- a/public/css/mainpage.css
+++ b/public/css/mainpage.css
@@ -73,8 +73,14 @@
 
 .right {
     right: 0;
+    border-left: 2px solid white;
+    margin:0;
+    padding:0;
 }
 
 .img-custom {
-    background-size: 100px;
+    object-fit: cover;
+    object-position: -100% 0;
+    height: auto;
+    width: auto;
 }
