--- a/public/views/contactpage.html
+++ b/public/views/contactpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>CONTACT PAGE</title>
@@ -9,6 +9,10 @@
     <div id="app-header">
         <nav class="nav-container">
             <a id="compname" class="nav_comp_name">CAR RENTAL</a>
+            <div class="lang-wrap">
+                <img class="pl-lang current-lang" src="../img/poland.png">
+                <img class="en-lang" src="../img/united-kingdom.png">
+            </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list" id="nav-list">
                     <li class="nav__item">
@@ -29,6 +33,18 @@
                 </ul>
             </div>
         </nav>
+    </div>
+    <div class="contact-container">
+        <div class="contact-img">
+            <img src="../img/Zych%20Piotr%204%20pp.jpg" class="contact-img">
+        </div>
+        <div class="contact-description">
+            <h3>PIOTR ZYCH</h3>
+            <h4>STUDENT PK</h4>
+            <h5>
+                <a href="mailto:piotr.zych@student.pk.edu.pl">piotr.zych@student.pk.edu.pl</a>
+            </h5>
+        </div>
     </div>
 </body>
 </html>
