add new img to repo and change styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 @import "mainpage.css";
 @import "choosecarpage.css";
 @import "contactpage.css";
+@import "servicepage.css";
 
 *{
     font-family: Lato, serif;
