--- a/public/views/mainpage.html
+++ b/public/views/mainpage.html
@@ -9,26 +9,22 @@
 <div id="app-header">
     <nav class="nav-container">
         <a id="compname" class="nav_comp_name">CAR RENTAL</a>
-        <div class="lang-wrap">
-            <img class="pl-lang current-lang" src="../img/poland.png" alt="polski">
-            <img class="en-lang" src="../img/united-kingdom.png" alt="english">
-        </div>
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list" id="nav-list">
                 <li class="nav__item">
-                    <a href="mainpage.html" class="nav__link">Main Page</a>
+                    <a href="mainpage.html" class="nav__link">Strona główna</a>
                 </li>
                 <li class="nav__item">
-                    <a href="servicespage.html" class="nav__link">Services</a>
+                    <a href="servicespage.html" class="nav__link">Usługi</a>
                 </li>
                 <li class="nav__item">
-                    <a href="choosecarpage.html" class="nav__link">Cars</a>
+                    <a href="choosecarpage.html" class="nav__link">Pojazdy</a>
                 </li>
                 <li class="nav__item">
-                    <a href="contactpage.html" class="nav__link">Contact</a>
+                    <a href="contactpage.html" class="nav__link">Kontakt</a>
                 </li>
                 <li class="nav__item">
-                    <a href="login.html" class="nav__link">Sign out</a>
+                    <a href="login.html" class="nav__link">Wyloguj się</a>
                 </li>
             </ul>
         </div>
