--- a/public/views/registration.html
+++ b/public/views/registration.html
@@ -10,8 +10,8 @@
         <div class="header">
             <div class="comp_name">CAR RENTAL</div>
             <div class="lang-wrap">
-                <img class="pl-lang current-lang" src="../img/poland.png">
-                <img class="en-lang" src="../img/united-kingdom.png">
+                <img id="pl-lang" class="lang-item current-lang" src="../img/poland.png" alt="polski">
+                <img id="en-lang" class="lang-item" src="../img/united-kingdom.png" alt="english">
             </div>
         </div>
     </header>
