--- a/public/views/servicespage.html
+++ b/public/views/servicespage.html
@@ -9,10 +9,6 @@
     <div id="app-header">
         <nav class="nav-container">
             <a id="compname" class="nav_comp_name">CAR RENTAL</a>
-            <div class="lang-wrap">
-                <img class="pl-lang current-lang" src="../img/poland.png">
-                <img class="en-lang" src="../img/united-kingdom.png">
-            </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list" id="nav-list">
                     <li class="nav__item">
@@ -33,6 +29,12 @@
                 </ul>
             </div>
         </nav>
+    </div>
+    <div class="main-container divide">
+        <h1>Lokalizacje</h1>
+        <img src="../img/map.png" class="img-map" alt="tu powinno być zdj mapki">
+        <h3>Parking</h3>
+        <div class="text-description">Aktualnie jest możliwość odbioru, a także zostawienia pojazdów w Krakowie na ulicy Warszawskiej 24. Staramy się zwiększyć zasięg naszej wypożyczalni o inne lokalizacje.</div>
     </div>
 </body>
 </html>
