--- a/public/css/contactpage.css
+++ b/public/css/contactpage.css
@@ -1,22 +1,18 @@
 .contact-container {
-    margin: -25px;
-    width: 300px;
-    height: 300px;
-    position: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .contact-container .contact-img {
-    height: 300px;
-    position: absolute;
-    border-radius: 60%;
-    top: 30%;
-    left: 50%;
-    margin: -25px 0 0 -25px;
+    height: 400px;
+    width: 310px;
+    margin: 100px auto 0 auto;
+    border-radius: 35% 20% 35% 20%;
 }
 
 .contact-container .contact-description {
     text-align: center;
-    position: absolute;
     top: 58%;
-    left: 50%;
 }
