--- a/public/views/choosecarpage.html
+++ b/public/views/choosecarpage.html
@@ -9,10 +9,6 @@
     <div id="app-header">
         <nav class="nav-container">
             <a id="compname" class="nav_comp_name">CAR RENTAL</a>
-            <div class="lang-wrap">
-                <img class="pl-lang current-lang" src="../img/poland.png">
-                <img class="en-lang" src="../img/united-kingdom.png">
-            </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list" id="nav-list">
                     <li class="nav__item">
@@ -37,7 +33,7 @@
     <div class="tile-container">
         <div class="tile">
             <div class="tile-img">
-                <img src="../img/choose_car.jpg" class="img-content">
+                <img src="../img/choose_car.jpg" class="img-content" alt="choose-car-img">
             </div>
             <div class="tile-content">
                 <div class="tile-description">
