add new changes in repo

--- a/public/css/mainpage.css
+++ b/public/css/mainpage.css
@@ -42,8 +42,11 @@
 }
 
 .nav__link {
-    text-decoration: none;
     color: white;
+}
+
+.nav__link {
+    text-decoration: underline;
 }
 
 .main-container {
