--- a/public/css/loginpage.css
+++ b/public/css/loginpage.css
@@ -27,6 +27,7 @@
     height: 50px;
     width: 50px;
     background-size: 20px;
+    cursor: pointer;
 }
 
 .lang-wrap #en-lang {
@@ -43,8 +44,7 @@ form {
 .container {
     width: 400px;
     margin: 100px auto 0 auto;
-    min-height: 400px;
-    height: 400px;
+    height: 420px;
     display: flex;
     flex-direction: column;
 
@@ -86,7 +86,8 @@ form {
 .container .container-header .header-item.active {
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(55,55,79,1) 35%, #3F99BC 100%);
     color: white;
-    margin-right: 5px
+    margin-right: 5px;
+    cursor: default;
 }
 
 .container .container-content .login .text-field {
@@ -139,6 +140,10 @@ button {
     color: #FFFFFF;
 }
 
+#registbtn:hover {
+    color: white;
+}
+
 .container .container-header .header-item:hover {
     color: #FFFFFF;
 }
@@ -151,4 +156,5 @@ button {
     color: white;
     font-weight: bold;
     font-style: italic;
+    margin: 10px 0 10px 0;
 }
